# orthodox-study-bible

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  llms.txt  pyproject.toml  skills-lock.json  uninstall.sh
.claude/: lint-max-lines.sh  settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
scripts/: build_release_db.py
src/osb/: __main__.py  config.py  models.py
src/osb/db/: collections.py  migrations.py  queries.py  schema.py  scripture.py  search.py  user_data.py
src/osb/importer/: epub_constants.py  epub_inspector.py  epub_parser.py  epub_parsing.py  epub_storage.py  epub_utils.py  lectionary.py  structure.py
src/osb/tui/: app.py
src/osb/tui/mixins/: chord_handler.py  rp_chat.py  rp_chat_history.py  rp_chat_streaming.py  rp_chat_ui.py  rp_chat_utils.py  rp_collections.py  rp_collections_helpers.py  rp_collections_input.py  rp_collections_render.py  rp_collections_utils.py  rp_notes.py  sp_navigation.py  sp_search.py  sp_verse_actions.py
src/osb/tui/screens/: add_to_collection_screen.py  book_search_screen.py  chat_refs_screen.py  crossref_screen.py  daily_screen.py  download_screen.py  glossary_screen.py  help_screen.py  import_screen.py  main_screen.py  main_screen_actions.py  main_screen_commands.py  main_screen_context.py  my_notes_screen.py  progress_screen.py  search_screen.py  splash_screen.py
src/osb/tui/styles/: main.tcss  themes.tcss
src/osb/tui/widgets/: annotation_modal.py  app_header.py  book_tree.py  book_tree_actions.py  book_tree_navigation.py  lectionary_bar.py  quit_modal.py  right_pane.py  rp_messages.py  rp_navigation.py  rp_scroll.py  rp_visibility.py  scripture_pane.py  status_bar.py  verse_block.py
tests/: golden.json  test_parser.py
