[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orthodox-study-bible"
version = "0.1.0"
description = "A modern, offline TUI for studying the Orthodox Study Bible (OSB) with local AI chat."
authors = [
    { name = "faka" }
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["orthodox", "bible", "tui", "python", "textual", "ollama", "scripture", "osb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Religion",
    "Topic :: Text Editors :: Text Processing",
]
dependencies = [
    "textual>=0.61.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
epub = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.urls]
Repository = "https://github.com/IFAKA/orthodox-study-bible"
"Issue Tracker" = "https://github.com/IFAKA/orthodox-study-bible/issues"

[project.scripts]
osb = "osb.__main__:main"

[dependency-groups]
dev = ["textual-dev>=0.61.0", "pytest>=8.0", "litecli>=1.12"]

[tool.hatch.build.targets.wheel]
packages = ["src/osb"]
